--- a/zy.conf
+++ b/zy.conf
@@ -1,14 +1,22 @@
-# Shadowrocket: 2021-05-14 15:18:33
+# Shadowrocket: 2021-05-14 15:50:19
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
 dns-server = system
 ipv6 = true
+update-url = https://raw.githubusercontent.com/stonegr/bf/main/zy.conf
 
 
 
 [Rule]
+DOMAIN-SUFFIX,netflix.com,NETFLIX
+DOMAIN-SUFFIX,netflix.net,NETFLIX
+DOMAIN-SUFFIX,nflxext.com,NETFLIX
+DOMAIN-SUFFIX,nflximg.com,NETFLIX
+DOMAIN-SUFFIX,nflximg.net,NETFLIX
+DOMAIN-SUFFIX,nflxso.net,NETFLIX
+DOMAIN-SUFFIX,nflxvideo.net,NETFLIX
 DOMAIN-SUFFIX,baidu.com,DIRECT
 DOMAIN-SUFFIX,baidubcr.com,DIRECT
 DOMAIN-SUFFIX,bdstatic.com,DIRECT
@@ -554,16 +562,14 @@ localhost = 127.0.0.1
 [URL Rewrite]
 ^http://(www.)?g.cn https://www.google.com 302
 ^http://(www.)?google.cn https://www.google.com 302
-#tiktok
 (?<=_region=)CN(?=&) JP 307
 (?<=&mcc_mnc=)4 2 307
 ^(https?:\/\/dm[\w-]+\.\w+\.com\/.+)(\?)(.+) $1$3 302
 (^https?:\/\/*\.\w{4}okv.com\/.+&.+)(\d{2}\.3\.\d)(.+) $118.0$3 302
-#youtube
 ctier=L ctier=A 302
 ^https:\/\/[\s\S]*\.googlevideo\.com/.*&(oad|ctier) _ REJECT
 
+
 [MITM]
 hostname = *.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com,*.googlevideo.com
-
 
