--- a/zy.conf
+++ b/zy.conf
@@ -10,6 +10,48 @@ update-url = https://raw.githubusercontent.com/stonegr/bf/main/zy.conf
 
 
 [Rule]
+DOMAIN,netflix.com.edgesuite.net,NETFLIX
+DOMAIN-SUFFIX,fast.com,NETFLIX
+DOMAIN-SUFFIX,netflix.com,NETFLIX
+DOMAIN-SUFFIX,netflix.net,NETFLIX
+DOMAIN-SUFFIX,netflixdnstest0.com,NETFLIX
+DOMAIN-SUFFIX,netflixdnstest1.com,NETFLIX
+DOMAIN-SUFFIX,netflixdnstest2.com,NETFLIX
+DOMAIN-SUFFIX,netflixdnstest3.com,NETFLIX
+DOMAIN-SUFFIX,netflixdnstest4.com,NETFLIX
+DOMAIN-SUFFIX,netflixdnstest5.com,NETFLIX
+DOMAIN-SUFFIX,netflixdnstest6.com,NETFLIX
+DOMAIN-SUFFIX,netflixdnstest7.com,NETFLIX
+DOMAIN-SUFFIX,netflixdnstest8.com,NETFLIX
+DOMAIN-SUFFIX,netflixdnstest9.com,NETFLIX
+DOMAIN-SUFFIX,nflxext.com,NETFLIX
+DOMAIN-SUFFIX,nflximg.com,NETFLIX
+DOMAIN-SUFFIX,nflximg.net,NETFLIX
+DOMAIN-SUFFIX,nflxso.net,NETFLIX
+DOMAIN-SUFFIX,nflxvideo.net,NETFLIX
+DOMAIN-KEYWORD,dualstack.apiproxy-,NETFLIX
+DOMAIN-KEYWORD,dualstack.ichnaea-web-,NETFLIX
+IP-CIDR,103.87.204.0/22,NETFLIX,no-resolve
+IP-CIDR,108.175.32.0/20,NETFLIX,no-resolve
+IP-CIDR,185.2.220.0/22,NETFLIX,no-resolve
+IP-CIDR,185.9.188.0/22,NETFLIX,no-resolve
+IP-CIDR,192.173.64.0/18,NETFLIX,no-resolve
+IP-CIDR,198.38.96.0/19,NETFLIX,no-resolve
+IP-CIDR,198.45.48.0/20,NETFLIX,no-resolve
+IP-CIDR,207.45.72.0/22,NETFLIX,no-resolve
+IP-CIDR,208.75.76.0/22,NETFLIX,no-resolve
+IP-CIDR,23.246.0.0/18,NETFLIX,no-resolve
+IP-CIDR,34.210.42.111/32,NETFLIX,no-resolve
+IP-CIDR,37.77.184.0/21,NETFLIX,no-resolve
+IP-CIDR,38.72.126.0/24,NETFLIX,no-resolve
+IP-CIDR,45.57.0.0/17,NETFLIX,no-resolve
+IP-CIDR,52.89.124.203/32,NETFLIX,no-resolve
+IP-CIDR,54.148.37.5/32,NETFLIX,no-resolve
+IP-CIDR,64.120.128.0/17,NETFLIX,no-resolve
+IP-CIDR,66.197.128.0/17,NETFLIX,no-resolve
+IP-CIDR,69.53.224.0/19,NETFLIX,no-resolve
+IP-CIDR,8.41.4.0/24,NETFLIX,no-resolve
+USER-AGENT,Argo*,NETFLIX
 DOMAIN-SUFFIX,baidu.com,DIRECT
 DOMAIN-SUFFIX,baidubcr.com,DIRECT
 DOMAIN-SUFFIX,bdstatic.com,DIRECT
@@ -553,16 +595,14 @@ FINAL,PROXY
 localhost = 127.0.0.1
 
 [URL Rewrite]
-^http://(www.)?g.cn https://www.google.com 302
-^http://(www.)?google.cn https://www.google.com 302
-(?<=_region=)CN(?=&) US 307
+(?<=_region=)CN(?=&) JP 307
 (?<=&mcc_mnc=)4 2 307
+^(https?:\/\/tnc[\w-]+\.\w+\.com\/.+)(\?)(.+) $1$3 302
 ^(https?:\/\/dm[\w-]+\.\w+\.com\/.+)(\?)(.+) $1$3 302
 (^https?:\/\/*\.\w{4}okv.com\/.+&.+)(\d{2}\.3\.\d)(.+) $118.0$3 302
-ctier=L ctier=A 302
-^https:\/\/[\s\S]*\.googlevideo\.com/.*&(oad|ctier) _ REJECT
+(^https?:\/\/[\w-]+\.googlevideo\.com\/.+)(ctier=L)(&.+) $1$3 302
+^https?:\/\/[\w-]+\.googlevideo\.com\/.+&(oad|ctier) - reject
 
 
 [MITM]
 hostname = *.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com,*.googlevideo.com
-
