--- a/zy.conf
+++ b/zy.conf
@@ -554,7 +554,8 @@ localhost = 127.0.0.1
 [URL Rewrite]
 ^http://(www.)?g.cn https://www.google.com 302
 ^http://(www.)?google.cn https://www.google.com 302
-
+ctier=L ctier=A 302
+^https:\/\/[\s\S]*\.googlevideo\.com/.*&(oad|ctier) _ REJECT
 
 [MITM]
-ebable=ture
+hostname =*.googlevideo.com
